2007-09-29  Peter Bloomfield

	* src/balsa-index.c: (balsa_index_load_mailbox_node): set
	threading in main-window instead of balsa-index.
	* src/main-window.c: ditto.

2007-09-29  Peter Bloomfield

	* src/balsa-index.c: (balsa_index_load_mailbox_node):
	balsa_window_get_view_filter is no longer exported;
	(bndx_do_popup): BalsaIndex::window no longer exists.
	* src/balsa-index.h: remove BalsaIndex::window.
	* src/main-window.c: do not export balsa_window_get_view_filter.
	* src/main-window.h: ditto.

2007-09-27  Peter Bloomfield

	* src/main-window.c: do not export enable_mailbox_menus.
	* src/main-window.h: ditto.
	* src/balsa-index.c: (balsa_index_load_mailbox_node):
	enable_mailbox_menus is no longer exported.

2007-09-27  Peter Bloomfield

	* doc/C/balsa.xml: fix identity-dialog and toolbar-editor 
	documentation.
	* libbalsa/identity.c: (append_ident_notebook_page),
	(setup_ident_frame), (display_frame_set_gpg_mode): show Security
	page even when GnuPG isn't supported, but grayed out and with an
	explanatory label.
	* libbalsa/libbalsa.h: update progress bar after a set time, not
	a set fraction of the work.
	* src/main.c: (balsa_progress_set_text),
	(balsa_progress_set_fraction): ditto.

2007-09-25  Peter Bloomfield

	* src/toolbar-factory.c: (menu_item_toggled_cb),
	(tm_popup_idle_cb), (tm_popup_deactivated_cb),
	(tm_remove_underscore), (tm_popup_position_func),
	(tm_do_popup_menu), (tm_button_press_cb), (tm_popup_menu_cb),
	(balsa_toolbar_new): add a popup-position func; clean up.

2007-09-25  Peter Bloomfield

	* src/toolbar-factory.c: (tm_load_model), (tm_save_model),
	(tm_gconf_notify), (balsa_toolbar_model_new), (tm_default_style),
	(tm_set_style), (tm_changed_cb), (do_popup_menu),
	(balsa_toolbar_new): catch changes in desktop toolbar style.

2007-09-24  Peter Bloomfield

	* src/toolbar-factory.c: (tm_default_toolbar_style),
	(tm_load_model), (tm_save_model), (do_popup_menu),
	(tm_popup_menu_cb), (balsa_toolbar_new): use desktop toolbar